# Backend

./: .env  .env-non_dev  Dockerfile  README.md  alembic.ini  app.sh  config.py  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py
app/api/handlers/: jobs.py  news.py  user.py
app/api/schemas/: old_schemas.py  schemas_jobs.py  schemas_news.py
app/api/services/: login.py
app/database/: models.py  session.py
app/database/methods/: jobs.py  news.py  userdal.py
app/routers/: admin_routers.py  job.py  login.py  news.py  user.py
app/security/: security.py
crawlers/: get_jobs.py  get_news.py  newscorrect.csv
entrypoints/: asgi.py
migrations/: env.py
migrations/versions/: 14959be59a6e_updates.py  1eae59ca299c_news_upda5432.py  54e4a59eadb2_updates.py  76129128e82f_news_uuidss.py  9ac560b41711_news_uuidsss.py  a86c015de176_jobs.py  b5620804cba5_lost.py  b93da7039dd8_news_uuids.py  bd6ffea5dc25_news_uuid.py  e14453233dda_.py  f27dd500dc9f_jobs.py
src/admin/blog_admin/: blog.py
src/admin/routers/: blog.py
src/admin/schemas/: blog.py
src/api/handlers/: jobs.py  news.py  user.py
src/api/schemas/: filters.py  old_schemas.py  schemas_jobs.py  schemas_news.py
src/api/services/: login.py
src/database/: models.py  session.py
src/database/methods/: jobs.py  news.py  userdal.py
src/routers/: admin_routers.py  job.py  login.py  news.py  user.py
src/security/: hashing.py  security.py
